--- a/www/deprecated.systems/index.html
+++ b/www/deprecated.systems/index.html
@@ -61,6 +61,7 @@
     <pre>
     ssb.e-mesh.net:8008:@AWf8Wn299ZUH7t+JAJL6B217LhDxfHEjgoGOXoYmNjY=.ed25519~z/8xEQWBDk/th68yZ6mPmvBdYv63r0/KnramPnzBGDI=
     (cjdns) h.ssb.e-mesh.net:8008:@AWf8Wn299ZUH7t+JAJL6B217LhDxfHEjgoGOXoYmNjY=.ed25519~z/8xEQWBDk/th68yZ6mPmvBdYv63r0/KnramPnzBGDI=
+    (yggdrasil) y.ssb.e-mesh.net:8008:@AWf8Wn299ZUH7t+JAJL6B217LhDxfHEjgoGOXoYmNjY=.ed25519~z/8xEQWBDk/th68yZ6mPmvBdYv63r0/KnramPnzBGDI=
     </pre>
 
     <p>-</p>
