Update ssb pub invite

--- a/www/deprecated.systems/index.html
+++ b/www/deprecated.systems/index.html
@@ -59,9 +59,9 @@
 
     <p>ssb pub invite</p>
     <pre>
-    ssb.e-mesh.net:8008:@AWf8Wn299ZUH7t+JAJL6B217LhDxfHEjgoGOXoYmNjY=.ed25519~z/8xEQWBDk/th68yZ6mPmvBdYv63r0/KnramPnzBGDI=
-    (cjdns) h.ssb.e-mesh.net:8008:@AWf8Wn299ZUH7t+JAJL6B217LhDxfHEjgoGOXoYmNjY=.ed25519~z/8xEQWBDk/th68yZ6mPmvBdYv63r0/KnramPnzBGDI=
-    (yggdrasil) y.ssb.e-mesh.net:8008:@AWf8Wn299ZUH7t+JAJL6B217LhDxfHEjgoGOXoYmNjY=.ed25519~z/8xEQWBDk/th68yZ6mPmvBdYv63r0/KnramPnzBGDI=
+    ssb.meshwithme.online:8008:@AWf8Wn299ZUH7t+JAJL6B217LhDxfHEjgoGOXoYmNjY=.ed25519~4wqyd8l+qUI7Esf8ZW51j/3CRzr6hsXsnWkM4WrO/vc=
+    (cjdns) h.ssb.meshwithme.online:8008:@AWf8Wn299ZUH7t+JAJL6B217LhDxfHEjgoGOXoYmNjY=.ed25519~4wqyd8l+qUI7Esf8ZW51j/3CRzr6hsXsnWkM4WrO/vc=
+    (yggdrasil) y.ssb.meshwithme.online:8008:@AWf8Wn299ZUH7t+JAJL6B217LhDxfHEjgoGOXoYmNjY=.ed25519~4wqyd8l+qUI7Esf8ZW51j/3CRzr6hsXsnWkM4WrO/vc=
     </pre>
 
     <p>-</p>
