--- a/www/deprecated.systems/index.html
+++ b/www/deprecated.systems/index.html
@@ -57,8 +57,9 @@
     (yggdrasil) https://y.ipfs.deprecated.systems/ipns/QmQqwSCuaaD3y2ZEyaaVFRofFjmWxWeH65P8nNuiJts2bs
     </pre>
 
-    <p>ssb pub invite</p>
+    <p>ssb pub invites</p>
     <pre>
+    ssb.aseriesoftubez.com:8008:@HFd43qiuy3oyquWJuKjt/N2w5QzQecAhTwmiLPkY8co=.ed25519~VnbvGOzQCFGuqth8JiCZ9XS/2wuMbax/gk8ohGfF0jM=
     ssb.meshwithme.online:8008:@AWf8Wn299ZUH7t+JAJL6B217LhDxfHEjgoGOXoYmNjY=.ed25519~4wqyd8l+qUI7Esf8ZW51j/3CRzr6hsXsnWkM4WrO/vc=
     (cjdns) h.ssb.meshwithme.online:8008:@AWf8Wn299ZUH7t+JAJL6B217LhDxfHEjgoGOXoYmNjY=.ed25519~4wqyd8l+qUI7Esf8ZW51j/3CRzr6hsXsnWkM4WrO/vc=
     (yggdrasil) y.ssb.meshwithme.online:8008:@AWf8Wn299ZUH7t+JAJL6B217LhDxfHEjgoGOXoYmNjY=.ed25519~4wqyd8l+qUI7Esf8ZW51j/3CRzr6hsXsnWkM4WrO/vc=
